<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_by"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#FF0000"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_verciculo"
        android:textSize="16sp"
        android:gravity="center"
        android:textStyle="italic">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_end_verciculo"
        android:textSize="12sp"
        android:gravity="center"
        android:textStyle="italic">
    </TextView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimation"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_speed="1"
        app:lottie_rawRes="@raw/satisfacao"/>
</LinearLayout>