<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="32dp"
                android:text="@string/str_tituloImc"
                android:textSize="50sp"
                android:textStyle="bold" /> -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPeso"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/str_hint_peso">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiePeso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="4" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAltura"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:hint="@string/str_hint_altura">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieAltura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="4" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCalc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="10"
                    android:backgroundTint="@color/default_button"
                    android:text="@string/str_calcular"
                    android:textColor="@color/default_tx_bt"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnLimpar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:backgroundTint="@color/default_button"
                    android:text="@string/str_limpar"
                    android:textColor="@color/default_tx_bt"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvIMC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/str_imcResult"
                android:textColor="#FF0000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded"
                android:layout_marginBottom="12dp">

                <TextView
                    android:id="@+id/tvResultado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/str_imcResultText"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="Índice"
                android:textStyle="bold|italic"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:paddingLeft="5dp"
                android:text=" Abaixo de 16.0 = Magreza Grave \n 16.0 à 16.9 = Magreza Moderada \n 17.0 à 18.5 = Magreza Leve \n 18.6 à 24.9 = Peso Ideal \n 25.0 à 29.9 = Sobrepeso \n 30.0 à 34.9 = Sobrepeso Grau I \n 35.0 à 39.9 = Sobrepeso Grau II ou Severa"
                android:textStyle="bold"
                android:layout_marginBottom="12dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>